@@ -177,7 +177,7 @@ std::string FileHelper::GetFormatedFileCreateDate(const std::string& fileName)
 
 
 	FILETIME ftCreate, ftAccess, ftWrite;
-	SYSTEMTIME stUTC;
+	SYSTEMTIME stUTC, stLocal;
 
 	// get file time and date
 	if (!GetFileTime(hFile, &ftCreate, &ftAccess, &ftWrite))
@@ -188,10 +188,11 @@ std::string FileHelper::GetFormatedFileCreateDate(const std::string& fileName)
 
 	// convert modification time to local time.
 	FileTimeToSystemTime(&ftCreate, &stUTC);
+	SystemTimeToTzSpecificLocalTime(NULL, &stUTC, &stLocal);
 
 	CloseHandle(hFile);
 
-	return SallyAPI::Date::DateHelper::GetDateString(stUTC, false);
+	return SallyAPI::Date::DateHelper::GetDateString(stLocal, false);
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -216,7 +217,7 @@ std::string FileHelper::GetFormatedFileWriteDate(const std::string& fileName)
 
 
 	FILETIME ftCreate, ftAccess, ftWrite;
-	SYSTEMTIME stUTC;
+	SYSTEMTIME stUTC, stLocal;
 
 	// get file time and date
 	if (!GetFileTime(hFile, &ftCreate, &ftAccess, &ftWrite))
@@ -227,10 +228,11 @@ std::string FileHelper::GetFormatedFileWriteDate(const std::string& fileName)
 
 	// convert modification time to local time.
 	FileTimeToSystemTime(&ftWrite, &stUTC);
+	SystemTimeToTzSpecificLocalTime(NULL, &stUTC, &stLocal);
 
 	CloseHandle(hFile);
 
-	return SallyAPI::Date::DateHelper::GetDateString(stUTC, false);
+	return SallyAPI::Date::DateHelper::GetDateString(stLocal, false);
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -255,7 +257,7 @@ std::string FileHelper::GetFormatedFileAccessDate(const std::string& fileName)
 
 
 	FILETIME ftCreate, ftAccess, ftWrite;
-	SYSTEMTIME stUTC;
+	SYSTEMTIME stUTC, stLocal;
 
 	// get file time and date
 	if (!GetFileTime(hFile, &ftCreate, &ftAccess, &ftWrite))
@@ -266,10 +268,11 @@ std::string FileHelper::GetFormatedFileAccessDate(const std::string& fileName)
 
 	// convert modification time to local time.
 	FileTimeToSystemTime(&ftAccess, &stUTC);
+	SystemTimeToTzSpecificLocalTime(NULL, &stUTC, &stLocal);
 
 	CloseHandle(hFile);
 
-	return SallyAPI::Date::DateHelper::GetDateString(stUTC, false);
+	return SallyAPI::Date::DateHelper::GetDateString(stLocal, false);
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////
